Add caching for sitemap page

--- a/test.ini
+++ b/test.ini
@@ -11,6 +11,8 @@ solr_url = http://127.0.0.1:8080/solr/ckan-schema-test
 # tests here. These will override the one defined in CKAN core's test-core.ini
 ckan.plugins = sitemap
 
+ckan.cache_expires = 300
+ckan.cache_enabled = True
 
 # Logging configuration
 [loggers]
